--- a/.github/workflows/webhook-trigger.yml
+++ b/.github/workflows/webhook-trigger.yml
@@ -5,23 +5,7 @@ on:
     branches: [main] # or whichever branch should trigger the workflow
 
 jobs:
-  trigger-workflow:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Send dispatch event to target repository
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        run: |
-          response=$(curl -s -o /dev/null -w "%{http_code}" -X POST \
-             -H "Accept: application/vnd.github.v3+json" \
-             -H "Authorization: token $PERSONAL_ACCESS_TOKEN" \
-             https://api.github.com/repos/angelomarquesdavinci/release-it-test/dispatches \
-             -d '{"event_type": "trigger-from-other-repo"}')
-
-           if [[ "$response" -ge 200 && "$response" -lt 300 ]]; then
-             echo "Request succeeded with status: $response"
-           else
-             echo "Request failed with status: $response"
-             exit 1
-           fi
+  call-reusable-workflow:
+    uses: angelomarquesdavinci/release-it-test/.github/workflows/reusable.yml@main
+    with:
+      branch: main
