--- a/.github/workflows/webhook-trigger.yml
+++ b/.github/workflows/webhook-trigger.yml
@@ -13,11 +13,11 @@ jobs:
         env:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: |
-          response=$(curl -s -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token $PERSONAL_ACCESS_TOKEN" \
-            https://api.github.com/repos/angelomarquesdavinci/release-it-test/dispatches \
-            -d '{"event_type": "trigger-from-other-repo"}')
+          response=$(curl -s -o /dev/null -w "%{http_code}" -X POST \
+             -H "Accept: application/vnd.github.v3+json" \
+             -H "Authorization: token $PERSONAL_ACCESS_TOKEN" \
+             https://api.github.com/repos/angelomarquesdavinci/release-it-test/dispatches \
+             -d '{"event_type": "trigger-from-other-repo"}')
 
           if [[ "$response" -ge 200 && "$response" -lt 300 ]]; then
             echo "Successfully triggered workflow."
